--- a/static/css/main.css
+++ b/static/css/main.css
@@ -127,3 +127,23 @@ body {
         color: gray; }
       .main .item .compare .img-wrapper {
         overflow: scroll; }
+
+
+#topnav {
+  width: 100%;
+  overflow: hidden;
+  margin: -0px 0 20px 0;
+  background:#ffa293;
+  text-align:center;
+}
+#topnav ul{width:100%;font-size:14px;margin: 0;padding: 0}
+#topnav ul li{width:15%;height:28px; display: inline-block;margin:3px auto 3px auto;
+}
+#topnav ul li a{text-align:center;
+  text-decoration:none;width:100%;height:100%;overflow: hidden;display: block;line-height:30px;
+  border:1px solid #f3ff22; border-radius: .7em;font-weight:bold;}
+
+
+
+
+
